package dominio.mascota;

public enum ClaseMascota {
  PERRO, GATO;
}
