package dominio.preguntas;

public class PreguntaBinaria extends PreguntaCerrada {

  public PreguntaBinaria(String preguntaDuenio, String preguntaAdoptante) {
    super(preguntaDuenio, preguntaAdoptante,"SI", "NO");
  }

  

}
