package dominio.rescate;

public enum EstadoPublicacion {
  PENDIENTE, APROBADA, RECHAZADA
}
