package dominio.usuarios;

public class Voluntario extends Usuario{
  public Voluntario(String username, String password){
    super(username,password);
  }
}
