@startuml RescateDePatitas

class Contacto{
  apellido
  nombre
  teléfono
  email
}

class Mascota{
  clase
  nombre
  apodo
  edad
  sexo
  descripcionFísica
  fotos[]
  características[]
  agregarUnaCaracteristica()
  obtenerDueño()
}

enum ClaseMascota{
  GATO
  PERRO
}

class Documento{
  tipo
  numero
}

enum TipoDeDocumento{
  DNI
  LC /' Libreta Cívica '/
  LE /' Libreta de Enrolamiento '/
  CI /' Cédula de Identidad '/
  PASAPORTE
}


class RescateConChapita{
  datosRescate
  mascota
}

class Coordenadas{
  latitud
  longitud
}

class Usuario{
  username
  password
}

class Administrador{
  agregarUnaCaracterística()
  eliminarUnaCaracterística()

}

class Dueño{
  mascotasRegistradas[]
  registrarUnaMascota()
  esMiMascota()
}

class Voluntario{

}

class Rescatista{
  direccion
  registrarRescate()
}

class DatosPersona{
  apellido
  nombre
  fechaDeNacimiento
  documento
  contacto
}


class DatosRescate{
  rescatista
  fotos
  fecha
  descripcion
  lugar
  hogar
}


class RescateSinChapita{
  datosRescate
  aprobada
  asociacionAsignada
  aprobar()
  rechazar()
  datosNoSensibles()
  fotos()
  estaAprobada()
}


enum EstadoPublicacion{
  APROBADO
  RECHAZADO
  PENDIENTE
}

class Hogar{
  nombre
  telefono
  preferencias
  tienePatio
  caracteristicasEspecificas
  ubicacion
  tieneCapacidad

  aceptaMascota()
}

class Pregunta{
  preguntaDuenio
  preguntaAdoptante
  esRespuestaValida()
}

class PreguntaCerrada{
  opciones
  esRespuestaValida()
}

class PreguntaBinaria{
  opciones = ["SI","NO"]
  preguntaAdoptante
}

class Respuesta{
  pregunta
  respuesta
}


class DarEnAdopcion{
  duenio
  mascota
  asociacion
  respuestas
  adoptar()
  darDeBaja()
}


SolicitudAdopcion -d->"*" Respuesta1
SolicitudAdopcion -d->    Dueño1
SolicitudAdopcion -u->    Asociacion
class SolicitudAdopcion{
  respuestas
  asociacion
  adoptante
  recomendar()
}

class Asociacion{
  nombre
  ubicacion
  preguntas
  distanciaA()
}

DarEnAdopcion     ->      Dueño
DarEnAdopcion     ->      Mascota
Respuesta         -d->    Pregunta
DarEnAdopcion     -->     Asociacion
DarEnAdopcion     -d->"*" Respuesta
Asociacion        -d->"*" Pregunta
PreguntaCerrada   -u-|>   Pregunta
PreguntaBinaria   -u-|>   PreguntaCerrada
Dueño             -u->    DatosPersona
Rescatista        -u->    DatosPersona
DatosPersona      -r->    Documento
DatosPersona      -l->    Contacto
DatosRescate      -u->    Rescatista
Dueño             -u-|>   Usuario
RescateConChapita -d->    Mascota
Documento         -r->    TipoDeDocumento
Mascota           -d->    ClaseMascota
Dueño             -d->"*" Mascota
Administrador     -u-|>   Usuario
DatosRescate        ->    Coordenadas
RescateSinChapita -d->    EstadoPublicacion
RescateSinChapita -d->    DatosRescate
RescateConChapita -d->    DatosRescate
DatosRescate      -d->    Hogar
Voluntario        -u-|>   Usuario



@enduml